# snake-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  Shuttle.toml  build.sh  docker-compose.yml
.github/workflows/: build-publish.yml
app/binary-render/: Cargo.toml
app/binary-render/src/: lib.rs  render.rs  sprites.rs
app/termion/: Cargo.toml
app/termion/src/: lib.rs  main.rs  render.rs  types.rs
app/termion/src/threads/: input.rs  mod.rs  ticker.rs
app/wasm/: Cargo.toml
app/web/: .gitignore  Cargo.toml
app/web/src/: lib.rs  render.rs  screen.rs  sprites.rs  types.rs  utils.rs
app/web/www/: index.html  index.js  render.js  utils.js
app/web/www/render/: field.js  index.js  panel.js  screen.js
core/: Cargo.toml
core/src/: food.rs  game.rs  lib.rs  render.rs  snake.rs  types.rs  utils.rs
snake-multiplayer/: Cargo.toml
snake-multiplayer/src/: input_thread.rs  lib.rs  main.rs  websocket_game.rs
snake-termion/: Cargo.toml
snake-termion/src/: input.rs  lib.rs  main.rs  render.rs  ticker.rs
snake-web/: Cargo.toml
snake-web/src/: input_thread.rs  lib.rs  main.rs  websocket_game.rs
snake-web/www/: index.html  index.js
snake-web/www/canvas/: constants.js
snake-web/www/wasm/: wasm_render.js  wasm_render_bg.wasm
src/: animate.rs  game.rs  lib.rs  main.rs  snake.rs  types.rs  utils.rs
src/threads/: input.rs  ticker.rs
wasm-render/: Cargo.toml
wasm-render/src/: lib.rs  render.rs  scene.rs  screen.rs  sprites.rs  types.rs  utils.rs
wasm-render/www/: index.html  index.js
wasm-render/www/canvas/: field.js  panel.js  utils.js
