[package]
name = "snake-multiplayer"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
snake = { path = "../core" }
wasm-render = { path = "../wasm-render" }
tokio = { version = "1.32.0", features = ["macros"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
salvo = { version = "0.55.5", features = ["websocket", "serve-static"] }
once_cell = "1"
futures-util = { version = "0.3", default-features = false }
rust-embed = "8.0.0"
bincode = "2.0.0-rc.3"

