[package]
name = "snake-web"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
snake = { path = "../core" }
tokio = { version = "1.32.0", features = ["macros"] }
salvo = { version = "0.58.0", features = ["websocket", "serve-static", "openssl"] }
once_cell = "1"
futures-util = { version = "0.3", default-features = false }
rust-embed = "8.0.0"
bincode = "2.0.0-rc.3"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
