[package]
name = "snake-web"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
snake = { path = "../core" }
tokio = { version = "1", features = ["macros"] }
salvo = { version = "0.59.0", features = ["websocket", "serve-static", "otel", "affix"] }
once_cell = "1"
futures-util = { version = "0.3", default-features = false }
rust-embed = "8.0.0"
bincode = "2.0.0-rc.3"
tracing = "0.1"
tracing-subscriber = "0.3.17"
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"]  }
tracing-opentelemetry = { version = "0.22.0" }
sentry = "0.32.0"
sentry-tracing = "0.32.0"
openssl = { version = "0.10.54", features = ["vendored"] }
