[package]
name = "wasm-render"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
js-sys = "0.3.64"
snake = { path = "../core" }
wasm-bindgen = "0.2.88"
bincode = "2.0.0-rc.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'Document',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
]
