[package]
name = "app_wasm"
authors = ["Dalton Oliveira <dalton.zoops@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snake = { path = "../../core" }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["lib"]
