[package]
name = "snake-web"
authors = ["Dalton Oliveira <dalton.zoops@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
snake = { path = "../../core" }
wasm-bindgen = "0.2.87"
# getrandom = { version = "0.2", features = ["js"] }

# web-sys = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
