[package]
name = "snake-web"
authors = ["Dalton Oliveira <dalton.zoops@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
snake = { path = "../../core" }
snake-binary-render = { path = "../binary-render" }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
